--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,12 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 file.reference.ApplicationWeb-TP_CV=.
+file.reference.TP_CV-AI_CV=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.ApplicationWeb-TP_CV}
+start.file=monCV.html
+web.context.root=/AI_CV
